0032564: Foundation Classes, OSD_CachedFileSystem - allow referring to non-default File System

Linked file system can be now customized within OSD_CachedFileSystem.